Added Support for a Variable Title Course Lookup and Creation API
The API supports both GET and POST.  Both GET and POST take the same JSON input.  GET does not take any actions to create the section it only checks for the existence of a matching section and returns the appropriate information. POST looks for a matching section and if it does not exist, it creates the section and returns the appropriate information.

The GET and POST both take the same JSON input with the following fields:
	• campus -  the campus for which to lookup/create the section.
	• year - the year for the term in which to lookup/create the section.
	• term - this is the term in which to lookup/create the section, e.g., Fall, Summer, Spring, etc.
	• subject area - the subject area abbreviation for the variable title course to look up/create
	• courseNumber - the base course number for the variable title course to look up/create
	• courseTitle - the title to be used for the course lookup/create
	• instructorId - the external id of the instructor associated with the course to look up/create
	• startDate - the first date of the course to look up/create
	• endDate - the last date of the course to look up/create

The GET and POST both return the same JSON input with the following fields:
	• campus - unchanged from the request
	• year - unchanged from the request
	• term - unchanged from the request
	• subject area - unchanged from the request
	• courseNumber - unchanged from the request
	• courseTitle - unchanged from the request
	• instructorId - unchanged from the request
	• startDate - unchanged from the request
	• endDate - unchanged from the request
	• fullCourseNumber - if a matching course offering is found / created, this will be the UniTime course number associated with the course offering.  Otherwise, it will not be present.
	• externalId - if a matching section is found / created this will be the CRN of the section. Otherwise, it will not be present.
	• status -
		    --     GET will ret